--- a/src/features/Header/Header.scss
+++ b/src/features/Header/Header.scss
@@ -1,11 +1,53 @@
+@use '../../scss' as *;
+
 .header {
     padding: 1rem;
     display: flex;
     align-items: center;
     gap: 1rem;
 
-    .menuIcon {
-        width: 1.5rem;
+    @include mq(lg) {
+        padding: 1rem 7.5rem;
+        gap: 2rem;
+    }
+
+    .menu {
+
+        .menu__icon {
+            width: 1.5rem;
+            cursor: pointer;
+
+            @include mq(lg) {
+                display: none;
+            }
+        }
+
+        .menu__content {
+            background-color: red;
+            z-index: 20;
+            position: fixed;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            width: 60%;
+            padding: 1rem;
+            transition: all 0.35s;
+
+            img {
+                width: 1.25rem;
+                margin-block-end: 4rem;
+                cursor: pointer;
+            }
+
+            li {
+                text-transform: capitalize;
+                font-weight: 500;
+                font-size: 1.25rem;
+                margin-block-end: 2rem;
+            }
+
+        }
+
     }
 
     .logo {
@@ -15,6 +57,31 @@
             width: 9rem;
         }
 
+        @include mq(lg) {
+            flex: initial;
+        }
+
+    }
+
+    .nav {
+        display: none;
+
+        @include mq(lg) {
+            display: initial;
+            flex: 1;
+
+            ul {
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+
+                li {
+                    display: inline-block;
+                    margin-inline-end: 1rem;
+                    text-transform: capitalize;                    
+                }
+            }
+        }
     }
 
     .cart {
