--- a/src/features/ProductPage/ProductPage.scss
+++ b/src/features/ProductPage/ProductPage.scss
@@ -1,7 +1,47 @@
-.productPage {
+@use '../../scss' as *;
 
-    > *:not(:first-child) {
+.productPage {
+    display: flex;
+    flex-flow: column;
+
+    @include mq(lg) {
+        padding: 2.5rem 7.5rem;
+        flex-flow: row;
+        align-items: center;
+    }
+
+    .productPage__col1 {
+        width: 100%;
+
+        .imageGalleryBig {
+            display: none;
+        }
+
+        @include mq(lg) {
+            padding: 0 3.5rem;
+            width: 50%;
+            
+            .imageGallery {
+                display: none;
+            }
+            
+            .imageGalleryBig {
+                display: initial;
+            }
+        }
+
+    }
+
+    .productPage__col2 {
         padding: 1rem;
+        display: flex;
+        flex-flow: column;
+        gap: 2rem;
+
+        @include mq(lg) {
+            padding: 0 3.5rem;
+            width: 50%;
+        }
     }
 
     .productPage__desc {
@@ -11,7 +51,7 @@
 
         h2 {
             text-transform: uppercase;
-            letter-spacing: 0.15em;
+            letter-spacing: 0.1em;
         }
 
         h1 {
@@ -29,6 +69,12 @@
         justify-content: space-between;
         align-items: center;
         font-weight: 700;
+
+        @include mq(lg) {
+            flex-flow: column;
+            justify-content: initial;
+            align-items: initial;
+        }
 
         > div {
             display: flex;
@@ -52,6 +98,11 @@
         display: flex;
         flex-flow: column;
         gap: 1rem;
+
+        @include mq(lg) {
+            flex-flow: row;
+            justify-content: space-between;
+        }
     }
 
 }
