--- a/src/scss/utils/_breakpoints.scss
+++ b/src/scss/utils/_breakpoints.scss
@@ -1,8 +1,10 @@
 @use 'sass:map'; 
 
 $breakpoints: (
-    "sm": 375px,
-    "xl": 1440px,
+    "sm": 400px,
+    "md": 768px,
+    "lg": 992px,
+    "xl": 1200px,
 );
 
 @mixin mq($key) {
