--- a/src/features/ProductPage/ProductPage.scss
+++ b/src/features/ProductPage/ProductPage.scss
@@ -33,7 +33,7 @@
     }
 
     .productPage__col2 {
-        padding: 1rem;
+        padding: 2rem 1rem;
         display: flex;
         flex-flow: column;
         gap: 2rem;
@@ -52,6 +52,7 @@
         h2 {
             text-transform: uppercase;
             letter-spacing: 0.1em;
+            color: $orange;
         }
 
         h1 {
@@ -60,6 +61,7 @@
 
         p {
             line-height: 1.5em;
+            color: $grey;
         }
     
     }
@@ -68,6 +70,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        gap: 0.5rem;
         font-weight: 700;
 
         @include mq(lg) {
@@ -79,17 +82,19 @@
         > div {
             display: flex;
             align-items: center;
-            gap: 0.75rem;
+            gap: 1rem;
         }
         
         .discount {
             padding: 0.5em;
             border-radius: 0.5rem;
-            background-color: #00000040;
+            color: $orange;
+            background-color: rgba($orange, 0.25);
         }
 
         .mrp {
             text-decoration: line-through;
+            color: $grey2;
         }
 
     }   
@@ -97,7 +102,7 @@
     .productPage__btns {
         display: flex;
         flex-flow: column;
-        gap: 1rem;
+        gap: 2rem;
 
         @include mq(lg) {
             flex-flow: row;
