--- a/src/features/Header/Header.scss
+++ b/src/features/Header/Header.scss
@@ -23,15 +23,18 @@
         }
 
         .menu__content {
-            background-color: red;
+            background-color: rgba(0, 0, 0, 0.25);
             z-index: 20;
             position: fixed;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            width: 60%;
-            padding: 1rem;
+            inset: 0;
             transition: all 0.35s;
+
+            nav {
+                width: 70%;
+                height: 100%;
+                padding: 1rem;
+                background-color: #fff;
+            }
 
             img {
                 width: 1.25rem;
@@ -39,9 +42,10 @@
                 cursor: pointer;
             }
 
+                
             li {
                 text-transform: capitalize;
-                font-weight: 500;
+                font-weight: 700;
                 font-size: 1.25rem;
                 margin-block-end: 2rem;
             }
@@ -67,6 +71,7 @@
         display: none;
 
         @include mq(lg) {
+            padding-inline: 1rem;
             display: initial;
             flex: 1;
 
@@ -77,8 +82,9 @@
 
                 li {
                     display: inline-block;
-                    margin-inline-end: 1rem;
-                    text-transform: capitalize;                    
+                    margin-inline-end: 2rem;
+                    text-transform: capitalize;   
+                    color: $grey;                 
                 }
             }
         }
