--- a/src/components/ImageGalleryBig/ImageGalleryBig.scss
+++ b/src/components/ImageGalleryBig/ImageGalleryBig.scss
@@ -5,7 +5,8 @@
         width: 100%;
         aspect-ratio: 1/1;
         border-radius: 1rem;
-        margin-block-end: 2rem;
+        margin-block-end: 1rem;
+        cursor: pointer;
     }
 
     .thumbnail {
@@ -15,7 +16,7 @@
         img {
             border-radius: 0.5rem;
             border: 2.5px solid transparent;
-            width: 6.25rem;
+            width: 4.5rem;
             cursor: pointer;
         }
 
