--- a/src/features/Header/Header.scss
+++ b/src/features/Header/Header.scss
@@ -1,20 +1,21 @@
 @use '../../scss' as *;
 
 .header {
-    padding: 1rem;
+    padding: 1.5rem 1rem;
     display: flex;
     align-items: center;
     gap: 1rem;
 
     @include mq(lg) {
-        padding: 1rem 7.5rem;
+        margin: 0 7.5rem;
         gap: 2rem;
+        border-block-end: 1px solid $grey3;
     }
 
     .menu {
 
         .menu__icon {
-            width: 1.5rem;
+            width: 1.35rem;
             cursor: pointer;
 
             @include mq(lg) {
@@ -37,7 +38,7 @@
             }
 
             img {
-                width: 1.25rem;
+                width: 1.35rem;
                 margin-block-end: 4rem;
                 cursor: pointer;
             }
@@ -46,7 +47,7 @@
             li {
                 text-transform: capitalize;
                 font-weight: 700;
-                font-size: 1.25rem;
+                font-size: 1.5rem;
                 margin-block-end: 2rem;
             }
 
