--- a/src/features/ProductPage/ProductPage.scss
+++ b/src/features/ProductPage/ProductPage.scss
@@ -18,7 +18,7 @@
         }
 
         @include mq(lg) {
-            padding: 0 3.5rem;
+            padding: 0 5rem;
             width: 50%;
             
             .imageGallery {
@@ -51,8 +51,9 @@
 
         h2 {
             text-transform: uppercase;
-            letter-spacing: 0.1em;
+            letter-spacing: 0.075em;
             color: $orange;
+            font-weight: 700;
         }
 
         h1 {
@@ -60,7 +61,7 @@
         }
 
         p {
-            line-height: 1.5em;
+            line-height: 1.6em;
             color: $grey;
         }
     
