--- a/src/features/Header/Header.scss
+++ b/src/features/Header/Header.scss
@@ -117,8 +117,9 @@
         }
     }
 
-    .cart {
-        width: 1rem;
+    .cartIcon {
+        width: 1.25rem;
+        cursor: pointer;
     }
 
     .avatar {
