--- a/src/features/ProductPage/ProductPage.scss
+++ b/src/features/ProductPage/ProductPage.scss
@@ -105,6 +105,14 @@
         flex-flow: column;
         gap: 2rem;
 
+        button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 1rem;
+            box-shadow: 0 5px 20px rgba($orange, 0.5);
+        }
+
         @include mq(lg) {
             flex-flow: row;
             justify-content: space-between;
