--- a/src/features/Header/Header.scss
+++ b/src/features/Header/Header.scss
@@ -118,8 +118,26 @@
     }
 
     .cartIcon {
-        width: 1.25rem;
+        position: relative;
         cursor: pointer;
+        padding-block-start: 0.5rem;
+
+        img {
+            width: 1.25rem;
+        }
+
+        .cartQty {
+            position: absolute;
+            top: 0.1rem;
+            right: -0.5rem;
+            font-size: 0.5em;
+            font-weight: 700;
+            background-color: $orange;
+            color: #fff;
+            padding: 0.1rem 0.5rem;
+            border-radius: 0.5rem;
+        }
+
     }
 
     .avatar {
