style: Responsive design tablet

--- a/src/components/ImageGallery/ImageGallery.scss
+++ b/src/components/ImageGallery/ImageGallery.scss
@@ -31,6 +31,11 @@
         right: 1rem;
     }
 
+    .disabled--btn {
+        opacity: 0.8;
+        cursor: initial;
+    }
+
     .imageGallery__container {
         display: flex;
         transition: all 0.5s;
