--- a/src/features/Header/Header.scss
+++ b/src/features/Header/Header.scss
@@ -6,7 +6,7 @@
     align-items: center;
     gap: 1rem;
 
-    @include mq(lg) {   
+    @include mq(xl) {   
         padding: 0 1rem;
         margin: 0 7.5rem;
         gap: 2rem;
@@ -25,11 +25,12 @@
         }
 
         .menu__content {
-            background-color: rgba(0, 0, 0, 0.25);
+            background-color: transparent;
             z-index: 20;
             position: fixed;
             inset: 0;
-            transition: all 0.35s;
+            transform: translate(-100%);
+            transition: transform 0.35s, background-color 0.15s linear 0.2s;
 
             nav {
                 width: 70%;
@@ -52,6 +53,11 @@
                 margin-block-end: 2rem;
             }
 
+        }
+
+        .menu__open {
+            transform: translate(0);
+            background-color: rgba(0, 0, 0, 0.25);
         }
 
     }
