--- a/src/features/ProductPage/ProductPage.scss
+++ b/src/features/ProductPage/ProductPage.scss
@@ -38,6 +38,10 @@
         flex-flow: column;
         gap: 2rem;
 
+        @include mq(md) {
+            padding: 2rem;
+        }
+
         @include mq(lg) {
             padding: 0 3.5rem;
             width: 50%;
@@ -63,6 +67,15 @@
         p {
             line-height: 1.6em;
             color: $grey;
+
+            @include mq(md) {
+                width: 75%;
+            }
+
+            @include mq(lg) {
+                width: 100%;
+            }
+
         }
     
     }
@@ -74,7 +87,7 @@
         gap: 0.5rem;
         font-weight: 700;
 
-        @include mq(lg) {
+        @include mq(md) {
             flex-flow: column;
             justify-content: initial;
             align-items: initial;
@@ -111,11 +124,16 @@
             justify-content: center;
             gap: 1rem;
             box-shadow: 0 5px 20px rgba($orange, 0.5);
+
+            @include mq(md) {
+                max-width: 250px;
+            }
+
         }
 
-        @include mq(lg) {
+        @include mq(md) {
             flex-flow: row;
-            justify-content: space-between;
+            gap: 2rem;
         }
     }
 
