fix: Semantic tag

--- a/src/components/ImageGallery/ImageGallery.scss
+++ b/src/components/ImageGallery/ImageGallery.scss
@@ -3,6 +3,8 @@
     overflow: hidden;
 
     .imageGallery__btn {
+        border: none;
+        outline: none;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
@@ -24,7 +26,7 @@
 
     .left--btn {
         left: 1rem;
-        padding-inline-end: 0.25rem;
+        padding-inline-end: 1.1rem;
     }
 
     .right--btn {
