--- a/src/components/QtyInput/QtyInput.scss
+++ b/src/components/QtyInput/QtyInput.scss
@@ -7,6 +7,9 @@
     min-width: 10rem;
 
     .qtyInput__btn {
+        border: none;
+        outline: none;
+        background-color: transparent;
         padding: 0.5rem 0.75rem;
         position: absolute;
         top: 50%;
