--- a/src/features/Header/Header.scss
+++ b/src/features/Header/Header.scss
@@ -32,7 +32,7 @@
             transform: translate(-100%);
             transition: transform 0.35s, background-color 0.15s linear 0.2s;
 
-            nav {
+            > div {
                 width: 70%;
                 height: 100%;
                 padding: 1rem;
